2018-06-29  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [WPE]: Fix exception handling when flatpak is not installed
        https://bugs.webkit.org/show_bug.cgi?id=186771

        Unreviewed followup-fix after r233362

        This was causing failures when flatpak is not installed.

        * flatpak/flatpakutils.py:
        (check_flatpak):

2018-06-29  Ross Kirsling  <ross.kirsling@sony.com>

        [JSCOnly] Restore Windows build.
        https://bugs.webkit.org/show_bug.cgi?id=187127

        Reviewed by Michael Catanzaro.

        * Scripts/build-jsc:
        Fix condition for disabling FTL JIT on Windows.

        * Scripts/webkitdirs.pm:
        (executableProductDir):
        JSCOnly should still use bin64 on Windows (for consistency with full WebKit build).
        (determineIsWin64):
        JSCOnly already defaults to 64-bit on Windows with Ninja -- ensure that this is true even with MSBuild.

2018-06-29  Thibault Saunier  <tsaunier@igalia.com>

        [GTK][WPE]: Add a way to setup our development environment inside flatpak
        https://bugs.webkit.org/show_bug.cgi?id=186771

        Reviewed by Carlos Alberto Lopez Perez.

        This patch introduce a way to setup the development environment inside flatpak[0]
        removing the need for jhbuild when doing so. Anything needed to build/run minibrowser/ run
        layout tests is provided either but the org.gnome.Sdk runtime or built with flatpak-builder.

        The workflow is very similar to the "jhbuild based" one except that you should use update-webkit$PORTNAME-flatpak instead
        of update-webkit$PORTNAME-libs and that script requires to specify a build configuration (--release is default).

        Our scripts have been updated to be able to run inside that new build environment.

        Since everything runs inside a flatpak sandbox, gdb needs to be run from within the sandbox, the script exposes a way to do it
        easily with the `--gdb` option:
